[gd_scene load_steps=8 format=3 uid="uid://bs4dsk2ecagfa"]

[ext_resource type="Script" uid="uid://cnb1ucxlpd5s1" path="res://UI/Menus/PauseMenu/PauseMenu.gd" id="1_etnfi"]
[ext_resource type="Shader" uid="uid://wsv2d532da3n" path="res://Scripts/Shaders/Menu/MenuBlur.gdshader" id="1_nov15"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_etnfi"]
shader = ExtResource("1_nov15")
shader_parameter/blur = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8y7ot"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_etnfi"]
resource_name = "PauseMenuBlurAnimation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}

[sub_resource type="Animation" id="Animation_q775a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q775a"]
_data = {
&"PauseMenuBlurAnimation": SubResource("Animation_etnfi"),
&"RESET": SubResource("Animation_q775a")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_etnfi")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_etnfi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.389287, 0.389287, 0.389287, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.7
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8y7ot")

[node name="PauseMenuButtons" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 39

[node name="ResumeButton" type="Button" parent="Panel/PauseMenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/PauseMenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="SettingsButton" type="Button" parent="Panel/PauseMenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="MainMenuButton" type="Button" parent="Panel/PauseMenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back to menu"

[node name="QuitButton" type="Button" parent="Panel/PauseMenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit to desktop"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q775a")
}
